# label-02332-GSB-0409

./: .gitignore  README.md  start.bat  start.sh
database-sqlite/: init.sql
docs/: project_design.md
frontend-app/: CMakeLists.txt
frontend-app/resources/: resources.qrc
frontend-app/resources/styles/: theme.qss
frontend-app/src/: difficultyselectwidget.cpp  difficultyselectwidget.h  gamebase.cpp  gamebase.h  gameselectwidget.cpp  gameselectwidget.h  gomokugame.cpp  gomokugame.h  historymanager.cpp  historymanager.h  historywidget.cpp  historywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  minesweepergame.cpp  minesweepergame.h  reversigame.cpp  reversigame.h  snakegame.cpp  snakegame.h  tetrisgame.cpp  tetrisgame.h
